# Spectral-Engine

./: .gitignore  CMakeLists.txt  README.md
Resources/: CMakeLists.txt  CmakeResourceFiles.cmake  fragment_shader.txt  vertex_shader.txt
Source/: CMakeLists.txt  CMakeSources.cmake  Main.cpp
Source/Core/: CMakeLists.txt  CMakeSources.cmake  CopyShaderFiles.cmake  FileReader.cpp  FileReader.h  SpWindow.cpp  SpWindow.h  Texture.cpp  Texture.h
Source/Core/Components/: Camera.cpp  Camera.h  CameraInputHandler.cpp  CameraInputHandler.h  GameObjectComponent.cpp  GameObjectComponent.h  Light.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Rotator.cpp  Rotator.h  Transform.cpp  Transform.h
Source/Core/Components/UI/: TextRenderer.cpp  TextRenderer.h
Source/Core/GameObject/: GameObject.cpp  GameObject.h
Source/Core/Math/: Degree.cpp  LinearTransformations.cpp  LinearTransformations.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.h  Radian.cpp  Radian.h  SpMath.h  Vector2.h  Vector3.cpp  Vector3.h
Source/Core/Shader/: Shader.cpp  Shader.h  ShaderCompilationException.cpp  ShaderCompilationException.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramLinkingException.cpp  ShaderProgramLinkingException.h
Source/Core/ShaderFiles/: fragment_lamp_shader.txt  fragment_lighting_shader.glsl  fragment_lighting_shader.txt  fragment_shader.txt  fragment_text_shader.glsl  vertex_lighting_shader.txt  vertex_text_shader.glsl
Source/Core/UI/Font/: Character.cpp  Character.h  Font.cpp  Font.h
Source/Core/Utility/: CameraInputHandler.cpp  CameraInputHandler.h  FreeTypeHelper.cpp  FreeTypeHelper.h  Initializers.h  ResourcesPathProvider.cpp  ResourcesPathProvider.h  VertexData.cpp  VertexData.h  Vertices.h
Source/Core/Utility/Input/: Input.cpp  Input.h  KeyCode.h  KeyInputManager.h  MouseInputManager.cpp  MouseInputManager.h
Source/Core/Utility/Math/: Degree.cpp  Degree.h  LinearTransformations.cpp  LinearTransformations.h  Matrix4x4.cpp  Matrix4x4.h  MatrixOperations.h  Quaternion.cpp  Quaternion.h  Radian.cpp  Radian.h  SpMath.cpp  SpMath.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Source/Game/: CMakeLists.txt  CmakeSources.cmake  Initializers.h  Vertices.h
Source/Game/Components/: Camera.cpp  Camera.h  CameraInputHandler.cpp  CameraInputHandler.h  GameObjectComponent.cpp  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Rotator.cpp  Rotator.h  Transform.cpp
Source/Game/Components/Interface/: IRenderer.h
Source/Game/Components/UI/: TextRenderer.cpp  TextRenderer.h
Source/Game/GameObject/: GameObject.cpp
Source/Libraries/Header/Glad/glad/: glad.h
Source/Libraries/Header/STB_Image/stb_image/: stb_image.h
Source/Libraries/lib/: glfw3.lib
Source/Libraries/source/glad/: glad.c
Source/PlatformIndependence/: CMakeLists.txt  CMakeSources.cmake  SpString.h  SpWindow.cpp  SpWindow.h
Source/PlatformIndependence/Input/: Input.cpp  Input.h  KeyInputManager.cpp  KeyInputManager.h  MouseInputManager.h
Source/Render/: CMakeLists.txt  CMakeSources.cmake  CopyShaderFiles.cmake  Texture.cpp  Texture.h  VertexData.cpp  VertexData.h
Source/Render/Shader/: Shader.cpp  Shader.h  ShaderCompilationException.cpp  ShaderCompilationException.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramLinkingException.cpp  ShaderProgramLinkingException.h
Source/Render/ShaderFiles/: fragment_lighting_shader.glsl  fragment_shader.glsl  vertex_lighting_shader.glsl  vertex_text_shader.glsl
Source/Render/UI/Font/: Character.cpp  Character.h  Font.cpp  Font.h  FreeTypeHelper.cpp  FreeTypeHelper.h
Source/Test/: CMakeLists.txt  CMakeSources.cmake  Tests.cpp
Source/Test/Core/Utility/Math/: DegreeTest.cpp  LinearTransformationsTest.cpp  Matrix4x4Test.cpp  QuaternionTest.cpp  RadianTest.cpp  Vector2Test.cpp  Vector3Test.cpp
Source/Test/GTest/lib/: gtest_maind.lib
